package csd230.bookstore.pojos;

public interface SaleableItem {
    void sellItem();
    Double getPrice();
}
